--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.1",
+    "@clerk/themes": "^2.2.17",
     "@radix-ui/react-dialog": "^1.1.5",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.74.1",
